--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Plugin/tags"]
 	path = Plugin/tags
 	url = https://github.com/CakeDC/tags.git
+[submodule "Plugin/users"]
+	path = Plugin/users
+	url = https://github.com/CakeDC/users.git
